--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -44,7 +44,7 @@ ddply(activity_noNA, .(date), summarize, median_steps=median(steps))
 ## What is the average daily activity pattern?
 For this section, I also used the data set 'activity_noNA', i.e. the data set with NA's removed.  The following code creates a plot of the average number of steps taken during each 5 minute time interval (0,5,10,...2355) for all days.
 ```{r First Time Plot}
-interval_mn<-ddply(activity_noNA, .(interval), summarize,      mean_steps = mean(steps))
+interval_mn<-ddply(activity_noNA, .(interval), summarize, mean_steps = mean(steps))
 plot(interval_mn$interval, interval_mn$mean_steps,type="l",  main = "Average Number of Steps per Time Interval", xlab = "Time Interval",  ylab = "Average number of steps")
 ```
 
@@ -61,7 +61,7 @@ The total number of NA's in the data set is 2304, found using the following code
 sum(is.na(activity$steps))
 ```
 
-I decided to replace the NA's with the average steps over all days for each interval. The following code creates a new data set ('new_activity') and replaces each NA value.
+I decided to replace the NA's with the average steps over all days for each interval, i.e. for each interval, I took the average over all days and replaced any NA's with the average corresponding to that interval. The following code creates a new data set ('new\_activity') and replaces each NA value with the average from our 'interval\_mn' data frame.
 ```{r}
 new_activity <- activity
 for (i in 1:length(new_activity$steps)){
@@ -74,6 +74,7 @@ We can check that it worked:
 ```{r}
 head(activity)
 head(new_activity)
+head(interval_mn)
 ```
 
 Here is the histogram of our data with the NA's replaced:
